# household-economics

./: .gitignore  LICENSE  README.md
backend/: app.py  (+4 more)
database/: .gitignore  README.md  alembic.ini  db.py  docker-compose.yml  pyproject.toml  requirements.txt
database/alembic/: env.py
database/alembic/versions/: 2026_06_20_1547-67dfe9cdd8de_add_new_table_categories.py  2026_06_25_1609-2cd6190e5222_add_record_types_table.py  2026_06_27_1541-a6a3e56d3f52_add_new_models_family_user_family_.py  2026_06_28_1740-3210fe23473d_add_user_column_to_control_access.py  2026_07_03_1131-cf241a834296_add_budget_tables.py  2026_07_03_2336-ef6f641febb7_year_per_budget_group.py  2026_07_07_1252-999f2e6d53fc_income_and_expeses.py  2026_07_11_1343-ac09d6a73346_add_unique_constraint_to_record_type_.py  2026_07_11_1346-cc8155c55dbd_add_set_null_to_category_foreign_keys.py  2026_07_11_1350-739b765e603b_add_capital_record_type.py  (+5 more)
database/database/: __init__.py
database/database_package/: __init__.py
database/models/: __init__.py  base.py  budget.py  budget_group.py  categories.py  category.py  currency_type.py  expense.py  expense_item.py  family.py  family_invitation.py  family_members.py  income.py  record_type.py  record_types.py  role.py  savings_investments.py  user.py
database/scripts/: constants.py  helpers.py  seed_local_db.py
database/services/: __init__.py  base.py  budget.py  categories.py  category.py  currency_type.py  expense.py  family.py  family_invitation.py  family_members.py  income.py  record_type.py  record_types.py  role.py  savings_investments.py  user.py
(+335 files in other folders)
