[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "database"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.18.4",
  "black==26.5.1",
  "click==8.4.1",
  "Mako==1.3.12",
  "MarkupSafe==3.0.3",
  "mypy_extensions==1.1.0",
  "packaging==26.2",
  "pathspec==1.1.1",
  "platformdirs==4.10.0",
  "psycopg2-binary==2.9.12",
  "python-dotenv==1.2.2",
  "pytokens==0.4.1",
  "SQLAlchemy==2.0.51",
  "typing_extensions==4.15.0",
]

[tool.setuptools]
py-modules = ["db"]

[tool.setuptools.packages.find]
where = ["."]
include = ["database*", "models*", "services*"]

[tool.setuptools.package-data]
database = [
  "alembic.ini",
  "alembic/*",
  "alembic/versions/*",
]